[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-network-planner"
version = "0.0.1"
authors = [
  { name="Sander Aarts", email="seaarts@gmail.com"},
]
description = "LoRa network planning tools in python"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seaarts/lora-network-planner"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
