# This setup.cfg file is based on basic content outlined in the link below
# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = loraplan
description = LoRa network planning tools in Python
author = Sander Aarts
license = MIT
platforms = unix, linux, osx, cygwin, win32

[options]
package_dir=
    =src
packages=find:
zip_safe = no
install_requres = 
	matplotlib>=3
    numpy>=1.2
    scipy>=1.9
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=4.0
    #mypy>=0.910
    flake8>=3.9
    six>=1.16

#[options.package_data]
#loraplan = py.typed We are not currently using type-hinted code

[flake8]
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
    build,
    dist
max-line-length = 88
ignore =
    # W503 line break before binary operator
    # C901 too complex
    # B010 setattr are often just necessary
    # B305 `.next()` is not a thing on Python 3
    W503, C901, B010, B305
extend-ignore = E203

[pydocstyle]
convention=numpy
add-ignore=D104,D107
